tests/paczka1/fuzzy1/71958184.err
Error in line 1: kTVHYgu8I SD18 10,9
Error in line 3: 9yyr A982 49,7
Error in line 11: kTVHYgu8I S618 10,5
Error in line 19: kVHYgu8I A982 102,8
Error in line 16: Ln7t0gYrS S618 19,3
Error in line 24: vDz8 A312 67,4
Error in line 36: QYPxv A300 24,2
